--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage001.yml
@@ -52,7 +52,7 @@ Talk_0017: |
   colors on the water, I think of my
   hometown, <0 Type='3' Data='0000'/>Lurelin Village<0 Type='3' Data='ffff'/>...
 Talk_0018: |
-  <3 Type='0' Data='0800'/>Welcome, sir!<0 Type='4'/>I have to thank you for what you did.
+  <3 Type='0' Data='0800'/>Welcome, ma'am!<0 Type='4'/>I have to thank you for what you did.
   Without my inn, I'd have no way to
   make a living.
   And indeed, the whole village benefits
