--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HyruleDepthHatago005.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HyruleDepthHatago005.yml
@@ -33,7 +33,7 @@ Com_Photo_01_01: |
   <3 Type='0' Data='0c01'/><FontSize Value='80'/>I'd go paint it if I had time.<5 Type='0'/> But I never do. If only
   I saw a <0 Type='3' Data='0000'/>picture<0 Type='3' Data='ffff'/> of it...<5 Type='1'/><FontSize Value='100'/>
 Com_Photo_Thank: |
-  <3 Type='0' Data='0101'/><4 Type='0' Data='0c005300610064005f0030003000'/>Thanks to you, Linkette, this painting
+  <3 Type='0' Data='0101'/><4 Type='0' Data='0c005300610064005f0030003000'/>Thanks to you, Rinkuru, this painting
   has brought a beautiful splash of color
   to the stable.
   A tree like that, why, I can't imagine all
@@ -60,7 +60,7 @@ Com_Photo_01: |
   <3 Type='0' Data='0c01'/><4 Type='0' Data='0e0043006800610074005f0030003000'/>What with the Upheaval and all, these are
   some troubled times. I'd like to show a
   picture that puts folks at ease.
-  Say, Linkette, do you know about
+  Say, Rinkuru, do you know about
   cherry-blossom trees?<5 Type='0'/> They've got
   the prettiest pink flowers.
   <3 Type='0' Data='0101'/><4 Type='0' Data='12004c00610075006700680053005f0030003000'/>We actually have a map of them hung up
@@ -82,7 +82,7 @@ Com_Photo_02: |
 9003: |
   I'm not showing you.
 Talk1001: |
-  <3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003000'/>Ah! Madam! <5 Type='0'/>You can't just take things from
+  <3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003000'/>Ah! Ma'am! <5 Type='0'/>You can't just take things from
   the stable as you please!
   
   <3 Type='0' Data='0001'/>That decoration there is kind of lucky
@@ -103,7 +103,7 @@ Com_Photo_03: |
   <3 Type='0' Data='0c01'/><4 Type='0' Data='10005400680069006e006b005f0030003000'/>It's supposed to be absolutely
   enchanting to look at.
 Talk1002: |
-  <3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004d005f0030003100'/>Ah! Madam! <5 Type='0'/>I told you, you can't just take
+  <3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004d005f0030003100'/>Ah! Ma'am! <5 Type='0'/>I told you, you can't just take
   things from our stable!
   
   <3 Type='0' Data='0a01'/>If you want your own, you'll just have to
