--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/FindSunaNui.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/FindSunaNui.yml
@@ -6,7 +6,7 @@ talk0026: |
 near0004: |
   Up for another challenge?
 talk0027: |
-  <0 Type='3' Data='0200'/><FontSize Value='80'/><3 Type='0' Data='0400'/><4 Type='0' Data='12004e006f0074006900630065005f0030003000'/>Aha! "Voe will make up reasons to talk with you."
+  <0 Type='3' Data='0200'/><FontSize Value='80'/><3 Type='0' Data='0400'/><4 Type='0' Data='12004e006f0074006900630065005f0030003000'/>Aha! "Strangers will make up reasons to talk with you."
   Just like Ms. Ashai said!<FontSize Value='100'/><0 Type='3' Data='ffff'/>
 talk0028: |
   <3 Type='0' Data='0801'/><4 Type='0' Data='12004c00610075006700680053005f0030003100'/>Heehee. I found the perfect hiding spot!<0 Type='4'/>Good luck figuring out where I put the
