--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/IchikaraChallenge01.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/IchikaraChallenge01.yml
@@ -374,7 +374,7 @@ Talk_0128: |
   sure how to do that.
 Talk_0196: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003000'/>What are you talking about? Have you
-  forgotten that voe aren't allowed in
+  forgotten that outsiders aren't allowed in
   Gerudo Town?
 Talk_0129: |
   <3 Type='0' Data='0800'/>I've got it!<0 Type='4'/>Papa is always sooo busy, so I'll just make
