--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_FaronHatago_001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_FaronHatago_001.yml
@@ -17,7 +17,7 @@ Com_Photo_03: |
   exactly drop my work and leave the stable
   to chase after a rumor.
 Com_Photo_Thank: |
-  <3 Type='0' Data='0800'/>Thanks to you, Linkette, the frame has the
+  <3 Type='0' Data='0800'/>Thanks to you, Rinkuru, the frame has the
   picture it deserves. The stable has a
   whole new feeling with it here.
   The giant white stallion is a symbol of
@@ -49,7 +49,7 @@ Com_Photo_05: |
   the<0 Type='3' Data='0000'/> giant white stallion looks<0 Type='3' Data='ffff'/> <0 Type='3' Data='0000'/>like <0 Type='3' Data='ffff'/>up close,
   I can paint a copy.
 DoNotWakka_01: |
-  <3 Type='0' Data='0b00'/><4 Type='0' Data='1200530075007200700072006900730065004d00'/>You can't take that with you, sir.<5 Type='1'/>
+  <3 Type='0' Data='0b00'/><4 Type='0' Data='1200530075007200700072006900730065004d00'/>You can't take that with you, ma'am.<5 Type='1'/>
   The association wants it displayed
   at all times.
   <0 Type='3' Data='0000'/><3 Type='0' Data='0701'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/><0 Type='3' Data='ffff'/>Pretty, isn't it? The name comes from the
