--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_SouthernVillage001.yml
@@ -10,7 +10,7 @@ Talk_0010: |
 Near_0001: |
   Welcome!
 Talk_0011: |
-  <3 Type='0' Data='0a00'/>Sir, you haven't got enough rock salt...<5 Type='0'/>
+  <3 Type='0' Data='0a00'/>Ma'am, you haven't got enough rock salt...<5 Type='0'/>
   Come again when you have some.
 Near_0002: |
   You can stay for free.
