--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis022.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis022.yml
@@ -31,7 +31,7 @@ talk0015: |
   situation is unique.
   
   As it happens, young Gerudo aren't
-  traditionally allowed to interact with voe.
+  traditionally allowed to interact with outsiders.
   
   And for vai born outside town, when they
   reach a certain age, they're summoned
