--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/BirdManContest.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/BirdManContest.yml
@@ -225,7 +225,7 @@ Talk06: |
   <3 Type='0' Data='0700'/>Hmm.<5 Type='0'/> Seeing as you're new to this
   experiment, we had best lay out the
   parameters.
-  Mimo!<5 Type='0'/> Tell the young lady what he'll
+  Mimo!<5 Type='0'/> Tell the young lady what she'll
   be doing!
 Talk23: |
   <3 Type='0' Data='0700'/>Since the experiment already began,
