--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_Azito003.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Middle_Azito003.yml
@@ -42,11 +42,11 @@ Talk_04: |
   <3 Type='0' Data='0700'/>That fearless demeanor...<5 Type='1'/> You must be the
   one they're all talking about. The new
   recruit who became a blademaster.
-  Our nemesis, Linkette, has been foiling our
+  Our nemesis, Rinkuru, has been foiling our
   plans, so it's heartening to have a
   powerful new warrior among our ranks.
   With you as its cornerstone, this hideout
-  is going to be invincible! Let's see Linkette
+  is going to be invincible! Let's see Rinkuru
   try getting in here now!
 Talk_05: |
   <3 Type='0' Data='0700'/>This hideout is the linchpin of the
@@ -71,12 +71,12 @@ Talk_00: |
   the new guy?
   
   You're lucky to even be alive with our
-  archnemesis Linkette out there scheming
+  archnemesis Rinkuru out there scheming
   to bring us down.
-  But no matter how cunning he is, he'll
+  But no matter how cunning she is, she'll
   never infiltrate this hideout!
   
-  So don't worry about him. Worry about
+  So don't worry about her. Worry about
   developing vehicles and training troops.
 ThunderHelmet_01: |
   The Lightning Helm!
